--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -845,6 +845,8 @@ FUNCS += functions/gnutls_ocsp_req_set_extension
 FUNCS += functions/gnutls_ocsp_req_set_extension.short
 FUNCS += functions/gnutls_ocsp_req_set_nonce
 FUNCS += functions/gnutls_ocsp_req_set_nonce.short
+FUNCS += functions/gnutls_ocsp_resp_check_crt
+FUNCS += functions/gnutls_ocsp_resp_check_crt.short
 FUNCS += functions/gnutls_ocsp_resp_deinit
 FUNCS += functions/gnutls_ocsp_resp_deinit.short
 FUNCS += functions/gnutls_ocsp_resp_export
