Fix out-of-source tests

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -108,6 +108,7 @@ TESTS_ENVIRONMENT =						\
 	PKCS12FILE_2=$(srcdir)/pkcs12-decode/pkcs12_2certs.p12	\
 	PKCS12PASSWORD_2=""					\
 	EXEEXT=$(EXEEXT)					\
+	top_builddir="$(top_builddir)"				\
 	srcdir="$(srcdir)"
 
 if WANT_TEST_SUITE
