--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -396,6 +396,7 @@ DISTCLEANFILES += $(ENUMS) stamp_enums stamp_functions
 
 stamp_functions: gnutls-api.texi x509-api.texi pgp-api.texi pkcs12-api.texi tpm-api.texi pkcs11-api.texi abstract-api.texi compat-api.texi dtls-api.texi crypto-api.texi ocsp-api.texi tpm-api.texi dane-api.texi
 	-mkdir functions
+	-rm -f functions/*.short
 	for i in $^; do \
 		$(srcdir)/scripts/split-texi.pl functions < $$i; \
 	done
