--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -963,6 +963,36 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_session_ticket_enable_server (gnutls_session_t session,
                                            const gnutls_datum_t * key);
 
+  /* SRTP, RFC 5764 */
+
+/**
+ * gnutls_srtp_profile_t:
+ * @GNUTLS_SRTP_AES128_CM_SHA1_80: 128 bit AES with a 80 bit HMAC-SHA1
+ * @GNUTLS_SRTP_AES128_CM_SHA1_32: 128 bit AES with a 32 bit HMAC-SHA1
+ * @GNUTLS_SRTP_NULL_SHA1_80: NULL cipher with a 80 bit HMAC-SHA1
+ * @GNUTLS_SRTP_NULL_SHA1_32: NULL cipher with a 32 bit HMAC-SHA1
+ *
+ * Enumeration of different SRTP protection profiles.
+ */
+  typedef enum
+  {
+    GNUTLS_SRTP_AES128_CM_SHA1_80 = 0x0001,
+    GNUTLS_SRTP_AES128_CM_SHA1_32 = 0x0002,
+    GNUTLS_SRTP_NULL_SHA1_80      = 0x0005,
+    GNUTLS_SRTP_NULL_SHA1_32      = 0x0006
+  } gnutls_srtp_profile_t;
+
+  int gnutls_srtp_set_profile (gnutls_session_t session,
+                               gnutls_srtp_profile_t profile);
+  int gnutls_srtp_set_profile_direct (gnutls_session_t session,
+                                      const char *profiles, const char **err_pos);
+  int gnutls_srtp_get_selected_profile (gnutls_session_t session,
+                                        gnutls_srtp_profile_t *profile);
+
+  const char *gnutls_srtp_get_profile_name (gnutls_srtp_profile_t profile);
+  int gnutls_srtp_get_profile_by_name (const char *name,
+                                       gnutls_srtp_profile_t *profile);
+
   int gnutls_key_generate (gnutls_datum_t * key, unsigned int key_size);
 
 /* if you just want some defaults, use the following.
