CRL verification includes the time checks.

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -448,6 +448,7 @@ extern "C"
  * @GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: The OCSP revocation data are too old.
  * @GNUTLS_CERT_REVOCATION_DATA_INVALID: The OCSP revocation data are invalid.
  * @GNUTLS_CERT_UNEXPECTED_OWNER: The owner is not the expected one.
+ * @GNUTLS_CERT_REVOCATION_DATA_ISSUED_IN_FUTURE: The revocation data have a future issue date.
  *
  * Enumeration of certificate status codes.  Note that the status
  * bits may have different meanings in OpenPGP keys and X.509
@@ -455,17 +456,18 @@ extern "C"
  */
   typedef enum
   {
-    GNUTLS_CERT_INVALID = 2,
-    GNUTLS_CERT_REVOKED = 32,
-    GNUTLS_CERT_SIGNER_NOT_FOUND = 64,
-    GNUTLS_CERT_SIGNER_NOT_CA = 128,
-    GNUTLS_CERT_INSECURE_ALGORITHM = 256,
-    GNUTLS_CERT_NOT_ACTIVATED = 512,
-    GNUTLS_CERT_EXPIRED = 1024,
-    GNUTLS_CERT_SIGNATURE_FAILURE = 2048,
-    GNUTLS_CERT_REVOCATION_DATA_TOO_OLD = 4096,
-    GNUTLS_CERT_REVOCATION_DATA_INVALID = 8192,
-    GNUTLS_CERT_UNEXPECTED_OWNER = 16384,
+    GNUTLS_CERT_INVALID = 1<<1,
+    GNUTLS_CERT_REVOKED = 1<<6,
+    GNUTLS_CERT_SIGNER_NOT_FOUND = 1<<7,
+    GNUTLS_CERT_SIGNER_NOT_CA = 1<<8,
+    GNUTLS_CERT_INSECURE_ALGORITHM = 1<<9,
+    GNUTLS_CERT_NOT_ACTIVATED = 1<<10,
+    GNUTLS_CERT_EXPIRED = 1<<11,
+    GNUTLS_CERT_SIGNATURE_FAILURE = 1<<12,
+    GNUTLS_CERT_REVOCATION_DATA_TOO_OLD = 1<<13,
+    GNUTLS_CERT_REVOCATION_DATA_INVALID = 1<<14,
+    GNUTLS_CERT_UNEXPECTED_OWNER = 1<<15,
+    GNUTLS_CERT_REVOCATION_DATA_ISSUED_IN_FUTURE = 1<<16,
   } gnutls_certificate_status_t;
 
 /**
