added new functions

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -155,7 +155,9 @@ APIMANS += gnutls_certificate_type_get_id.3
 APIMANS += gnutls_certificate_type_get_name.3
 APIMANS += gnutls_certificate_type_list.3
 APIMANS += gnutls_certificate_type_set_priority.3
+APIMANS += gnutls_certificate_verification_status_print.3
 APIMANS += gnutls_certificate_verify_peers2.3
+APIMANS += gnutls_certificate_verify_peers3.3
 APIMANS += gnutls_check_version.3
 APIMANS += gnutls_cipher_add_auth.3
 APIMANS += gnutls_cipher_decrypt.3
@@ -584,6 +586,7 @@ APIMANS += gnutls_session_enable_compatibility_mode.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
 APIMANS += gnutls_session_get_id.3
+APIMANS += gnutls_session_get_id2.3
 APIMANS += gnutls_session_get_ptr.3
 APIMANS += gnutls_session_get_random.3
 APIMANS += gnutls_session_is_resumed.3
@@ -620,6 +623,12 @@ APIMANS += gnutls_srp_set_prime_bits.3
 APIMANS += gnutls_srp_set_server_credentials_file.3
 APIMANS += gnutls_srp_set_server_credentials_function.3
 APIMANS += gnutls_srp_verifier.3
+APIMANS += gnutls_srtp_get_keys.3
+APIMANS += gnutls_srtp_get_profile_id.3
+APIMANS += gnutls_srtp_get_profile_name.3
+APIMANS += gnutls_srtp_get_selected_profile.3
+APIMANS += gnutls_srtp_set_profile.3
+APIMANS += gnutls_srtp_set_profile_direct.3
 APIMANS += gnutls_store_commitment.3
 APIMANS += gnutls_store_pubkey.3
 APIMANS += gnutls_strerror.3
