--- a/configure.ac
+++ b/configure.ac
@@ -640,6 +640,7 @@ AC_MSG_NOTICE([Optional features:
 (note that included applications might not compile properly
 if features are disabled)
 
+  DTLS-SRTP support:$ac_enable_srtp
   OCSP support:     $ac_enable_ocsp
   OpenPGP support:  $ac_enable_openpgp
   SRP support:      $ac_enable_srp
